--- a/app/scss/_mobile-navigation.scss
+++ b/app/scss/_mobile-navigation.scss
@@ -78,12 +78,18 @@
     display: block;
     width: 62px;
     height: 6px;
+    border-radius: 1px;
     background-color: var(--bg-color-accent-2);
     transition: transform 300ms ease-in-out, width 300ms ease-in-out,
       opacity 300ms ease-in-out;
 
     &:not(:last-child) {
       margin-bottom: 10px;
+    }
+
+    &:nth-child(2) {
+      max-width: 66.6%;
+      margin-left: auto;
     }
 
     @include breakpoint-down(mdsmall) {
@@ -107,7 +113,7 @@
   }
 
   :nth-child(2) {
-    width: 0%;
+    width: 0;
     opacity: 0;
   }
 
